--- a/generator/asset/element/zone/mainZone_glc/style.less
+++ b/generator/asset/element/zone/mainZone_glc/style.less
@@ -1,7 +1,7 @@
 @import "../less/functions.less";
 @import "../less/variables.less";
 
-#${zoneName} {    
+#MainZone {    
     position:relative;
     font-size:100%;
     /*margin-top: 1%;    */
@@ -13,4 +13,57 @@
     -webkit-box-shadow: 1px 1px 1px #ccc;
     box-shadow: 1px 1px 1px #ccc;
     overflow:hidden;
+}
+
+#MainZone .logo{
+	width:85px;
+	height:85px;
+	display:block;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	text-align:right;
+	img {
+	    margin-right: 10px;
+	    margin-top:10px;
+	    background : transparent no-repeat;
+	}
+}
+
+#MainZone .title {
+  	color: @grayDark;
+  	font-weight:500;
+	font-size:135%;
+	line-height:135%;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	display:block;
+	margin-right:90px;
+	text-shadow:2px 2px 5px #aaa;
+}
+#MainZone .timer{
+	width:10px;
+	height:95%;
+	position:absolute;
+	left:10px;
+	top:15px;
+	border-radius:3px;
+	background-color:@grayLightPlus;
+	
+	#progressbar{
+		background-color:@grayLighter;
+		width:100%;
+		height:100%;
+		display:inline-block;
+		position:absolute;
+		top:0;
+		left:0;
+		border-radius:3px;
+	}
+}
+#MainZone_content {
+	position: absolute;
+	top: 25%;
+	height: 75%;
+	width: 93%;
 }
